# awesome-hello

hello_cpp_python/: CMakeLists.txt  lib.cpp  lib.hpp  loadlib.py
hello_muliprocess_python/: simple_pipeline.py
